# frontend-mcp

./: .env.example  .gitignore  AGENT_GUIDE.md  MCP_PLAN.md  MCP_WORKFLOW.md  README.md  STAGES.md  What_to_build.md  pyproject.toml
coordination_layer/: README.md  RELEASE.md
coordination_sandbox/: README.md  __init__.py  __main__.py  run.py
design_benchmarks/: README.md
docs/: EXECUTION_RUNTIME.md  FLAKY_EVAL_INVESTIGATION.md  INTEGRATION_PLAN.md  INTELLIGENCE_MODULES.md  MCP_UX_IMPROVEMENTS_REPORT.md  PERFORMANCE_TOOL_CLASSIFICATION.md  PREVIEW_1.2.0.md  PRODUCTION_TEST_PLAN.md  PRODUCT_STORY.md  R12_IMPLEMENTATION_PLAN.md  README.md  REPO_LAYOUT.md  TECHNICAL_NARRATIVE.md  architecture.md  design_decisions.md  roadmap.md  tool_reference.md
evals/: AI_VISIBILITY_FIX_LOOP_EVAL.md  ARCHITECTURE_RETHINK.md  ASYNC_EXECUTION_MODEL.md  CODE_UI_EVAL.md  END_USER_MCP_EVALUATION.md  INSTALLED_MCP_EVALUATION.md  LOCAL_VALIDATION_v1.1.2.md  PAGE_INSPECTION_EVAL.md  PERFORMANCE_REVIEW.md  RESOLVER_ARCHITECTURE.md  V1.1.0_END_USER_MCP_EVALUATION.md  V1.1.1_END_USER_MCP_EVALUATION.md  V1.1.1_PRODUCTION_POLISH_EVALUATION.md  V1.1.2_QUALITY_FIRST_EVALUATION.md  V1.1.4_INSTALLED_MCP_FULL_TEST_REPORT.md  V1.1.5_AGENT_EVALUATION.md
references/: README.md
sandbox/: index.html  package-lock.json  package.json  vite.config.js
scripts/: collect_inspiration.py  download_inspiration.py  hard_done_ladder_sim.py  inspiration_blob_cleanup.py  install_preview_dev.ps1  installed_mcp_e2e_v1_1_4.py  installed_mcp_e2e_v1_1_5.py  live_chrome_convention_proof.py  phase1_mcp_smoke.py  phase2_mcp_smoke.py  phase3_mcp_smoke.py  poc_figma_community_api.mjs  probe_figma_community.py  probe_inspiration_sites.py  publish_pypi.ps1  research_figma_community_search.py  run_agent_full_eval_v1_1_5.py  run_all_installed_mcp_tests.py  run_community_duplication_poc.py  run_figma_intelligence_pipeline.py  run_flaw_gallery.py  run_full_mcp_agent_eval.py  run_seo_live_audit.py  run_tool_by_tool_agent_log.py  seo_dev.py  test_edge_lab_only.py  validate_ship_council_install.py  validate_ship_council_loop.py
src/: _bootstrap.py  demo.py  run_agent.py  run_all_phases.py  run_coordination_validation.py  run_docs_parity_audit.py  run_execution_validation.py  run_hardening.py  run_mcp_contract_tests.py  run_mcp_eval_ai_visibility.py  run_mcp_eval_code_ui.py  run_mcp_eval_page_inspection.py  run_mcp_eval_validation_form.py  run_performance_baseline.py  run_phase1.py  run_phase2.py  run_phase3.py  run_phase4.py  run_polish_eval.py  run_production_validation.py  run_release_gate.py  run_soak_test.py  test_perception.py
tests/: conftest.py  design_sense_fixtures.py  run_design_benchmark.py  run_design_sense_scenarios.py  test_ai_visibility_adapter.py  test_ai_visibility_analyzers.py  test_ai_visibility_pipeline.py  test_async_execution_phase1.py  test_audits_parser.py  (+65 more)
(+1122 files in other folders)
