[project]
name = "frontend-perception-engine"
version = "1.2.0.dev10"
description = "Frontend Perception MCP — deterministic browser runtime for coding agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "browser-use>=0.13.3",
  "code-review-graph>=2.3.6",
  "python-dotenv>=1.0.0",
  "mcp>=1.0.0",
  "pillow>=10.0.0",
  "google-auth>=2.29.0",
  "google-auth-oauthlib>=1.2.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0.0",
]

[project.scripts]
frontend-perception-mcp = "navigation.cli.main:main"
frontend-perception-install = "navigation.cli.install:main"
frontend-mcp = "navigation.cli.main:main"

[project.optional-dependencies]
aws = ["boto3>=1.35.0"]
# Audits use Lighthouse CLI via npx (Node.js 18+). No extra Python packages required.
audits = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
navigation = ["**/*.md", "**/*.yaml", "**/*.json"]

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["src", "tests"]
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "-p", "no:logfire",
]
markers = [
  "unit: fast unit test with no network / browser (T0)",
  "golden: golden regression test with committed fixtures (T1)",
  "contract: MCP handler contract test — requires sandbox on :5173 (T2)",
  "integration: end-to-end integration test — requires sandbox and possibly companions (T3/T6)",
  "eval: agent playbook eval — requires sandbox (T4)",
  "stdio: MCP stdio wire protocol test (T5)",
  "failure: failure/degraded-mode scenario (T7)",
  "slow: takes more than 30s — excluded from default fast tier",
  "manual: requires human interaction or external credentials (never in CI)",
]
filterwarnings = [
  "ignore::DeprecationWarning:pydantic.*",
  "ignore::UserWarning:pydantic.*",
]
